<resources>

    <!-- titles -->
    <string name="app_name">Rate Anything</string>
    <string name="category_title">Categories</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- Testing Strings -->
    <string name="testing_string">TEST</string>
    <string name="testing_string2">TESTING</string>
    <string name="testing_string_again">Trying to test a pull from master</string>
    <string name="new_string">This is a new string to development.</string>

    <!-- Login Fragment  -->
    <string name="login_fragment">Login fragment</string>
    <string name="enter_email">Email</string>
    <string name="enter_username">Username / Email</string>
    <string name="enter_password">Password</string>
    <string name="btn_sign_in">Login</string>
    <string name="stay_logged_in">Stay Logged-In?</string>
    <string name="login_directions_part1">Enter either your email or username, </string>
    <string name="login_directions_part2">then your password.</string>

    <!-- Registration Fragment -->
    <string name="directions_for_registration">Complete the following fields to register
        and become a new Rate Anything Member</string>
    <string name="register_sign_up_title">Sign up</string>
    <string name="register_password_hint">Password</string>
    <string name="register_password_confirm_hint">Password confirm</string>
    <string name="register_username_hint">Username</string>
    <string name="register_first_name_hint">First name</string>
    <string name="register_last_name_hint">Last name</string>
    <string name="register_email_hint">Email</string>
    <string name="btn_register">Submit</string>

    <!-- Shared Preferences  -->
    <string name="LOGIN_PREFS">edu.tacoma.uw.group9_450project.rateanything.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>

    <!-- menu items -->
    <string name="action_logout">Sign Out</string>
    <string name="action_about">About</string>
    <string name="action_add_category">Add Category</string>
    <string name="action_option">Option</string>
    <string name="action_add_item">Add Item</string>
    <string name="action_rate_item">Rate Item</string>
    <string name="sync_list">Sync with Database</string>
    <string name="action_add_rating">Add Rating</string>

    <!-- Start Screen items -->
    <string name="register_btn">Register</string>
    <string name="proceed_to_login">Login</string>
    <string name="proceed_to_categories">Continue</string>
    <string name="proceed_as_guest">Continue as Guest</string>

    <!-- Ratings Activity and Fragment -->
    <string name="rating_anon_author">Anonymous</string>
    <string name="activity_add_rating">Rate\nThis!</string>

    <!-- Add Category -->
    <string name="hint_category">Category name</string>
    <string name="hint_category_description">Description</string>
    <string name="hint_category_description_short">Short Details</string>

    <!-- Add Item -->
    <string name="hint_item">Item name</string>
    <string name="hint_item_description">Description</string>
    <string name="hint_item_description_short">Short Details</string>

    <!-- Add Rating -->
    <string name="post_anonymous_prompt">Post Anonymously?</string>
    <string name="add_rating_title">Add a Rating</string>

</resources>