<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sync_category"
        android:orderInCategory="50"
        android:title="@string/sync_list"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_add_category"
        android:orderInCategory="50"
        android:title="@string/action_add_category"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="60"
        android:title="@string/action_about"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="80"
        android:title="@string/action_logout"
        app:showAsAction="always"
        />



</menu>