<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/add_item_dialog_title"
        android:fontFamily="@font/nunito_bold_font"
        android:text="@string/add_rating_title"
        android:textSize="24sp"
        android:padding="8dp"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#2895FF"
        android:textIsSelectable="false"/>

    <CheckBox
        android:id="@+id/posting_choice_rating_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_anonymous_prompt"
        >

    </CheckBox>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="5">


    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rating_value_rating_layout"
        android:numStars="5"
        android:stepSize="0.5"
        android:layout_gravity="right"
        android:theme="@style/RatingBar">

    </RatingBar>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="254">

        <EditText
            app:backgroundTint="#2895FF"
            android:id="@+id/input_rating_comments"
            android:fontFamily="@font/nunito_bold_font"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:maxLength="254"
            android:lines="6"
            android:maxLines="8"
            android:scrollbars="vertical"
            android:textSize="16dp"
            android:hint="@string/hint_item_description"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/input_rating_cancel_button"
            android:background="@android:color/transparent"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:layout_width="92dp"
            android:layout_height="56dp"
            android:text="Cancel"
            android:textColor="#2895FF"
            android:textSize="18dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/input_rating_add_button"
            android:background="@drawable/round_button"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_width="92dp"
            android:layout_height="56dp"
            android:text="Add"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>